<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextA"
        android:layout_width="120dp"
        android:layout_height="68dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="230dp"
        android:ems="10"
        android:hint="@string/string_a"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextB"
        android:layout_width="120dp"
        android:layout_height="68dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/string_b"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/editTextC"
        app:layout_constraintStart_toEndOf="@+id/editTextA"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextC"
        android:layout_width="120dp"
        android:layout_height="68dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/string_c"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="340dp"
        android:text="@string/string_calc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="10dp"
        android:text="@string/string_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcButton" />

    <TextView
        android:id="@+id/textViewAnswer1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="115dp"
        android:text="@string/string_ans1"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAnswer2"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="60dp"
        android:text="@string/string_ans2"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>